# smpaint

./: .gitignore  CMakeLists.txt  README.md  smpaint.sln
mirrorreflect/: CMakeLists.txt  mirrorreflect.vcxproj  mirrorreflect.vcxproj.filters  mirrorreflector.cpp  mirrorreflector.h
point/: CMakeLists.txt  point.cpp  point.h  point.vcxproj  point.vcxproj.filters
shapescaler/: CMakeLists.txt  shapescaler.cpp  shapescaler.h  shapescaler.vcxproj  shapescaler.vcxproj.filters
smpaint/: CMakeLists.txt  main.cpp  mainwidget.cpp  mainwidget.h  smpaint.cpp  smpaint.h  smpaint.qrc  smpaint.ui  smpaint.vcxproj  smpaint.vcxproj.filters  smpdrawer.cpp  smpdrawer.h
smpaint/core/: smpaint.cpp  smpaint.h  smpdrawer.cpp  smpdrawer.h
smpaint/plugins/: ISmpPlugin  ismpplugin.h  plugin_interface.cpp  plugin_interface.h  pluginloader.cpp  pluginloader.h  stdafx.h
smpaint/shapes/: datafield.h  ellipse.cpp  ellipse.h  field.h  isosctriangle.cpp  isosctriangle.h  line.cpp  line.h  parallelogram.cpp  parallelogram.h  point.cpp  point.h  rectangle.cpp  rectangle.h  shape.cpp  shape.h  shapefactory.cpp  shapefactory.h  shapes.h
smpaint/ui/: drawcanvas.cpp  drawcanvas.h  mainwidget.cpp  mainwidget.h  menu.cpp  menu.h  sidebar.cpp  sidebar.h
smpcolorizer/: CMakeLists.txt  smpcolorizer.cpp  smpcolorizer.h  smpcolorizer.vcxproj  smpcolorizer.vcxproj.filters
